--- a/compiler/tools/mgb-importer/CMakeLists.txt
+++ b/compiler/tools/mgb-importer/CMakeLists.txt
@@ -1,6 +1,6 @@
 get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
-# since it links with imported megbrain library, it should use default RPATH settings or
-# llvm would rewrite it but missing correct rpath of libmegbrain
+# since it links with imported megengine library, it should use default RPATH settings or
+# llvm would rewrite it but missing correct rpath of libmegengine
 add_llvm_executable(mgb-importer mgb-importer.cpp NO_INSTALL_RPATH)
 llvm_update_compile_flags(mgb-importer)
 target_link_libraries(mgb-importer PRIVATE ${dialect_libs} MLIRMGBImporter Common
