feat(compiler): support rc4 encrypt model and format CMakeLists

--- a/compiler/lib/CodeGen/CMakeLists.txt
+++ b/compiler/lib/CodeGen/CMakeLists.txt
@@ -92,12 +92,8 @@ add_mlir_dialect_library(
   MLIRTosaTransforms
   MLIROptLib
   MLIREmitC
-
   MLIRTosaToLinalg
   MLIRSCFToStandard
   MLIRMemRefToLLVM
   MLIRReconcileUnrealizedCasts
-
-  MLIRExecutionEngine
-)
-
+  MLIRExecutionEngine)
