--- a/compiler/lib/KernelGen/CMakeLists.txt
+++ b/compiler/lib/KernelGen/CMakeLists.txt
@@ -1,9 +1,10 @@
 # use xxd generate the LibJit.h file
 add_custom_command(
-   OUTPUT ${CMAKE_BINARY_DIR}/generate/LibJit.h
-   COMMAND mkdir -p ${CMAKE_BINARY_DIR}/generate && cd ${MEGCC_THIRD_PARTY_DIR}/tcc/lib && xxd -i libtcc1.a ${CMAKE_BINARY_DIR}/generate/LibJit.h
-   DEPENDS
-   VERBATIM)
+  OUTPUT ${CMAKE_BINARY_DIR}/generate/LibJit.h
+  COMMAND mkdir -p ${CMAKE_BINARY_DIR}/generate && cd ${MEGCC_THIRD_PARTY_DIR}/tcc/lib
+          && xxd -i libtcc1.a ${CMAKE_BINARY_DIR}/generate/LibJit.h
+  DEPENDS
+  VERBATIM)
 
 file(GLOB_RECURSE ARM_SOURCES_FILE ./Arm/*.cpp ./Arm/*.h)
 file(GLOB_RECURSE BARE_SOURCES_FILE ./BareMetal/*.cpp ./BareMetal/*.h)
@@ -18,10 +19,20 @@ add_library(KernelGenIface STATIC ${INTERFACE_SOURCE_FILE})
 if(MEGCC_ENABLE_MLIR_KERN_GEN)
   target_compile_definitions(KernelGenIface PUBLIC MEGCC_ENABLE_MLIR_KERN_GEN=1)
 endif()
-target_include_directories(KernelGenIface PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include/)
+target_include_directories(KernelGenIface
+                           PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include/)
 target_include_directories(KernelGenIface PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/)
 
-list(APPEND STATIC_KERNEL ${ARM_SOURCES_FILE} ${INTERFACE_SOURCE_FILE} ${BARE_SOURCES_FILE} ${COMMON_SOURCES_FILE} ${UTILS_SOURCES_FILE} ${JIT_SOURCES_FILE} ${GI_SOURCES_FILE})
+list(
+  APPEND
+  STATIC_KERNEL
+  ${ARM_SOURCES_FILE}
+  ${INTERFACE_SOURCE_FILE}
+  ${BARE_SOURCES_FILE}
+  ${COMMON_SOURCES_FILE}
+  ${UTILS_SOURCES_FILE}
+  ${JIT_SOURCES_FILE}
+  ${GI_SOURCES_FILE})
 if(MEGCC_ENABLE_MLIR_KERN_GEN)
   list(APPEND STATIC_KERNEL ${AUTO_BARE_SOURCES_FILE})
 endif()
@@ -30,8 +41,10 @@ add_library(KernelGen STATIC ${STATIC_KERNEL} ${CMAKE_BINARY_DIR}/generate/LibJi
 target_include_directories(KernelGen PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/)
 target_include_directories(KernelGen PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include/)
 target_include_directories(KernelGen PRIVATE ${CMAKE_BINARY_DIR}/generate/)
-target_include_directories(KernelGen PRIVATE ${TCC_INCLUDE_DIR} ${RUNTIME_SRC_DIR} ${RUNTIME_INCLUDE_DIR})
-target_compile_options(KernelGen PRIVATE -Werror -Wno-error=variadic-macros -Wno-variadic-macros)
+target_include_directories(KernelGen PRIVATE ${TCC_INCLUDE_DIR} ${RUNTIME_SRC_DIR}
+                                             ${RUNTIME_INCLUDE_DIR})
+target_compile_options(KernelGen PRIVATE -Werror -Wno-error=variadic-macros
+                                         -Wno-variadic-macros)
 target_link_libraries(KernelGen PUBLIC ${TCC_INSTALL_LIB})
 target_link_libraries(KernelGen PRIVATE KernelGenIface)
 if(MEGCC_ENABLE_MLIR_KERN_GEN)
@@ -39,4 +52,3 @@ if(MEGCC_ENABLE_MLIR_KERN_GEN)
   target_link_libraries(KernelGen PRIVATE MegCCCodeGen)
   mlir_check_all_link_libraries(KernelGen)
 endif()
-
