--- a/compiler/tools/megcc-translate/CMakeLists.txt
+++ b/compiler/tools/megcc-translate/CMakeLists.txt
@@ -1,7 +1,7 @@
 get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
 get_property(translation_libs GLOBAL PROPERTY MLIR_TRANSLATION_LIBS)
-# since it links with imported megengine library, it should use default RPATH settings or
-# llvm would rewrite it but missing correct rpath of libmegengine
+# since it links with imported megengine library, it should use default RPATH settings
+# or llvm would rewrite it but missing correct rpath of libmegengine
 add_llvm_executable(megcc-translate megcc-translate.cpp NO_INSTALL_RPATH)
 llvm_update_compile_flags(megcc-translate)
 target_link_libraries(
