--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,7 @@ jobs:
       - name: Checkout MegCC
         uses: actions/checkout@v3
       - name: Prepare env
-        run: |
-          python3 -m pip install boto3
-          python3 -m pip install redis
-          python3 -m pip install -i https://pypi.megvii-inc.com/simple korok
-          ./ci/prepare.sh /root/llvm-project
+        run: ./ci/prepare.sh /root/llvm-project
       - name: Cmake build MegCC
         run: ./compiler/script/ci/run_local_cmake_build.sh ./compiler/local_cmake_build  /root/llvm-project
       - name: Regression test
@@ -47,14 +43,8 @@ jobs:
       - name: Checkout MegCC
         uses: actions/checkout@v3
       - name: Prepare env
-        run: |
-          python3 -m pip install boto3
-          python3 -m pip install redis
-          python3 -m pip install -i https://pypi.megvii-inc.com/simple korok
-          ./ci/prepare.sh /root/llvm-project
+        run: ./ci/prepare.sh /root/llvm-project
       - name: Cmake build and run kernel test
         run: ./compiler/script/ci/run_local_kernel_ut.sh ./compiler/kernel_ut_x86_64 /root/llvm-project
       - name: Cmake build and run instruction test
         run: ./runtime/scripts/run_local_instruction_test.sh
-      - name: Remote test
-        run: ./compiler/script/ci/remote_test.py android_arm64_kernel_test android_armv7_kernel_test
