--- a/compiler/test/kernel/CMakeLists.txt
+++ b/compiler/test/kernel/CMakeLists.txt
@@ -10,6 +10,7 @@ option(MEGCC_COMPILER_TARGET_TEST "Enable megcc target unit test run" ON)
 option(MEGCC_COMPILER_KERNEL_WITH_ASAN "Enalbe asan check" OFF)
 option(MEGCC_COMPILER_KERNEL_BENCHMARK "Enalbe kernel benchmark" OFF)
 option(MEGCC_COMPILER_KERNEL_DISABLE_DOT "Disable ARM Dot kernel" OFF)
+option(MEGCC_COMPILER_KERNEL_ARMV8_2_FP16 "Disable Float16 kernel" OFF)
 option(MEGCC_COMPILER_KERNEL_MLIR_AUTO "Enable MLIR gen auto kernel" OFF)
 
 if(MEGCC_COMPILER_KERNEL_MLIR_AUTO)
@@ -76,7 +77,7 @@ if(CMAKE_TOOLCHAIN_FILE)
       COMMAND unset EXTRA_CMAKE_ARGS
       COMMAND
         export
-        EXTRA_CMAKE_ARGS=\""-DMGE_BUILD_IMPERATIVE_RT=OFF -DMGE_WITH_TEST=OFF -DMGE_BUILD_SDK=OFF -DMGE_WITH_LITE=ON -DMGE_WITH_PYTHON_MODULE=OFF -DMGE_ENABLE_RTTI=ON -DBUILD_SHARED_LIBS=OFF"\"
+        EXTRA_CMAKE_ARGS=\""-DMGE_BUILD_IMPERATIVE_RT=OFF -DMGE_WITH_TEST=OFF -DMGE_BUILD_SDK=OFF -DMGE_WITH_LITE=ON -DMGE_WITH_PYTHON_MODULE=OFF -DMGE_ENABLE_RTTI=ON -DBUILD_SHARED_LIBS=OFF -DMGE_ARMV8_2_FEATURE_FP16=ON"\"
       COMMAND ${MGB_BUILD_SCRIPT} -a ${MEGCC_COMPILER_KERNEL_TEST_ARCH}
       COMMAND cp ${MGB_BUILD_LIBS} ${CMAKE_CURRENT_BINARY_DIR}/MGB_CROSS/
       COMMAND cp -r ${MGB_INCLUDE_DIR} ${MGB_INCLUDE_COPY_DIR}/
@@ -103,13 +104,15 @@ message(
   STATUS "\tBuild with Asan:                        ${MEGCC_COMPILER_KERNEL_WITH_ASAN}")
 message(
   STATUS "\tBuild with Auto:                        ${MEGCC_COMPILER_KERNEL_MLIR_AUTO}")
+message(
+  STATUS "\tBuild with Float16:                     ${MEGCC_COMPILER_KERNEL_ARMV8_2_FP16}")
 
 add_library(mgb_imported STATIC ${MGB_INSTALL_LIBS})
 target_link_libraries(mgb_imported PUBLIC ${MGB_INSTALL_LIBS})
 target_include_directories(mgb_imported PUBLIC ${MGB_INCLUDE_COPY_DIR}/include)
 set_target_properties(mgb_imported PROPERTIES LINKER_LANGUAGE CXX)
 
-set(MEGCC_COMPILE_FLAG -DENABLE_ASSERT=1 -DENABLE_LOG=1 -Wall -Wno-class-memaccess)
+set(MEGCC_COMPILE_FLAG -DENABLE_ASSERT=1 -DENABLE_LOG=1 -Wall)
 if(MEGCC_COMPILER_KERNEL_BENCHMARK)
   set(MEGCC_COMPILE_FLAG ${MEGCC_COMPILE_FLAG} -DENABLE_KERNEL_BENCHMARK=1)
 endif()
@@ -212,14 +215,14 @@ if(NOT MEGCC_CROSS_COMPILE)
   endif()
   target_include_directories(megcc_test_gen PRIVATE ${MEGCC_TEST_COMMON_INCLUDE}
                                                     ${MEGCC_TESTGEN_FLAG_DIR})
-  target_compile_options(megcc_test_gen PRIVATE ${MEGCC_COMPILE_FLAG})
+  target_compile_options(megcc_test_gen PRIVATE ${MEGCC_COMPILE_FLAG} -Wno-class-memaccess)
   target_link_options(megcc_test_gen PRIVATE "-fuse-ld=gold")
   install(
     TARGETS megcc_test_gen
     EXPORT megcc_test_gen
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT megcc_test_gen)
   set(GEN_SRC_EXTRA_FLAG
-      "-DMEGCC_COMPILER_DIR=${MEGCC_COMPILER_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DMEGCC_COMPILER_KERNEL_WITH_ASAN=${MEGCC_COMPILER_KERNEL_WITH_ASAN}"
+      "-DMEGCC_COMPILER_DIR=${MEGCC_COMPILER_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DMEGCC_COMPILER_KERNEL_WITH_ASAN=${MEGCC_COMPILER_KERNEL_WITH_ASAN} -DMEGCC_COMPILER_KERNEL_ARMV8_2_FP16=${MEGCC_COMPILER_KERNEL_ARMV8_2_FP16}"
   )
   add_custom_command(
     OUTPUT ${MEGCC_TEST_GEN_SRC_LIB}
@@ -258,6 +261,9 @@ else()
     set(GEN_CROSS_SRC_EXTRA_FLAG
         "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE} -DANDROID_NDK=${ANDROID_NDK} -DANDROID_ABI=${ANDROID_ABI}  -DANDROID_NATIVE_API_LEVEL=${ANDROID_NATIVE_API_LEVEL} -DMEGCC_COMPILER_DIR=${MEGCC_COMPILER_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DMEGCC_COMPILER_KERNEL_WITH_ASAN=${MEGCC_COMPILER_KERNEL_WITH_ASAN}"
     )
+    if("${MEGCC_COMPILER_KERNEL_TEST_ARCH}" STREQUAL ${MEGCC_CONST_ARMV8_ABI})
+    set(GEN_CROSS_SRC_EXTRA_FLAG "${GEN_CROSS_SRC_EXTRA_FLAG} -DMEGCC_COMPILER_KERNEL_ARMV8_2_FP16=${MEGCC_COMPILER_KERNEL_ARMV8_2_FP16}") 
+    endif()
   elseif("${MEGCC_COMPILER_KERNEL_TEST_ARCH}" STREQUAL ${MEGCC_CONST_RISCV_RVV})
     set(GEN_CROSS_SRC_EXTRA_FLAG
         "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE} -DMEGCC_COMPILER_DIR=${MEGCC_COMPILER_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DMEGCC_COMPILER_KERNEL_WITH_ASAN=${MEGCC_COMPILER_KERNEL_WITH_ASAN}"
