feat(runtime): add changes for support fp16 dtype
GitOrigin-RevId: df3788aaaa39b9977c8fbe1df8b9b0f9f220b488

--- a/compiler/test/kernel/CMakeLists.txt
+++ b/compiler/test/kernel/CMakeLists.txt
@@ -10,7 +10,7 @@ option(MEGCC_COMPILER_TARGET_TEST "Enable megcc target unit test run" ON)
 option(MEGCC_COMPILER_KERNEL_WITH_ASAN "Enalbe asan check" OFF)
 option(MEGCC_COMPILER_KERNEL_BENCHMARK "Enalbe kernel benchmark" OFF)
 option(MEGCC_COMPILER_KERNEL_DISABLE_DOT "Disable ARM Dot kernel" OFF)
-option(MEGCC_COMPILER_KERNEL_ARMV8_2_FP16 "Disable Float16 kernel" OFF)
+option(MEGCC_COMPILER_KERNEL_ENABLE_FP16 "Enable Float16 kernel" OFF)
 option(MEGCC_COMPILER_KERNEL_MLIR_AUTO "Enable MLIR gen auto kernel" OFF)
 
 if(MEGCC_COMPILER_KERNEL_MLIR_AUTO)
@@ -105,7 +105,7 @@ message(
 message(
   STATUS "\tBuild with Auto:                        ${MEGCC_COMPILER_KERNEL_MLIR_AUTO}")
 message(
-  STATUS "\tBuild with Float16:                     ${MEGCC_COMPILER_KERNEL_ARMV8_2_FP16}")
+  STATUS "\tBuild with Float16:                     ${MEGCC_COMPILER_KERNEL_ENABLE_FP16}")
 
 add_library(mgb_imported STATIC ${MGB_INSTALL_LIBS})
 target_link_libraries(mgb_imported PUBLIC ${MGB_INSTALL_LIBS})
@@ -115,6 +115,9 @@ set_target_properties(mgb_imported PROPERTIES LINKER_LANGUAGE CXX)
 set(MEGCC_COMPILE_FLAG -DENABLE_ASSERT=1 -DENABLE_LOG=1 -Wall)
 if(MEGCC_COMPILER_KERNEL_BENCHMARK)
   set(MEGCC_COMPILE_FLAG ${MEGCC_COMPILE_FLAG} -DENABLE_KERNEL_BENCHMARK=1)
+endif()
+if(MEGCC_COMPILER_KERNEL_ENABLE_FP16)
+  set(MEGCC_COMPILE_FLAG ${MEGCC_COMPILE_FLAG} -DENABLE_KERNEL_FP16=1)
 endif()
 set(MEGCC_THIRD_PARTY_DIR ${MEGCC_COMPILER_DIR}/../third_party/)
 
@@ -222,7 +225,7 @@ if(NOT MEGCC_CROSS_COMPILE)
     EXPORT megcc_test_gen
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT megcc_test_gen)
   set(GEN_SRC_EXTRA_FLAG
-      "-DMEGCC_COMPILER_DIR=${MEGCC_COMPILER_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DMEGCC_COMPILER_KERNEL_WITH_ASAN=${MEGCC_COMPILER_KERNEL_WITH_ASAN} -DMEGCC_COMPILER_KERNEL_ARMV8_2_FP16=${MEGCC_COMPILER_KERNEL_ARMV8_2_FP16}"
+      "-DMEGCC_COMPILER_DIR=${MEGCC_COMPILER_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DMEGCC_COMPILER_KERNEL_WITH_ASAN=${MEGCC_COMPILER_KERNEL_WITH_ASAN} -DMEGCC_COMPILER_KERNEL_ENABLE_FP16=${MEGCC_COMPILER_KERNEL_ENABLE_FP16}"
   )
   add_custom_command(
     OUTPUT ${MEGCC_TEST_GEN_SRC_LIB}
@@ -262,7 +265,7 @@ else()
         "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE} -DANDROID_NDK=${ANDROID_NDK} -DANDROID_ABI=${ANDROID_ABI}  -DANDROID_NATIVE_API_LEVEL=${ANDROID_NATIVE_API_LEVEL} -DMEGCC_COMPILER_DIR=${MEGCC_COMPILER_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DMEGCC_COMPILER_KERNEL_WITH_ASAN=${MEGCC_COMPILER_KERNEL_WITH_ASAN}"
     )
     if("${MEGCC_COMPILER_KERNEL_TEST_ARCH}" STREQUAL ${MEGCC_CONST_ARMV8_ABI})
-    set(GEN_CROSS_SRC_EXTRA_FLAG "${GEN_CROSS_SRC_EXTRA_FLAG} -DMEGCC_COMPILER_KERNEL_ARMV8_2_FP16=${MEGCC_COMPILER_KERNEL_ARMV8_2_FP16}") 
+    set(GEN_CROSS_SRC_EXTRA_FLAG "${GEN_CROSS_SRC_EXTRA_FLAG} -DMEGCC_COMPILER_KERNEL_ENABLE_FP16=${MEGCC_COMPILER_KERNEL_ENABLE_FP16}") 
     endif()
   elseif("${MEGCC_COMPILER_KERNEL_TEST_ARCH}" STREQUAL ${MEGCC_CONST_RISCV_RVV})
     set(GEN_CROSS_SRC_EXTRA_FLAG
