--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -7,6 +7,7 @@ project(TinyNN LANGUAGES C ASM)
 
 option(TINYNN_SHARED_ENABLE "enable TinyNN build with shared library." OFF)
 option(TINYNN_ENABLE_ASAN "Build with asan to check memory issue." OFF)
+option(TINYNN_ENABLE_FP16 "enable fp16 feature" OFF)
 option(TINYNN_ACHIEVE_ALL "Build with achieve all lic static." OFF)
 option(TINYNN_SANITY_ALLOC "malloc all tensor dynamic for asan check." OFF)
 option(TINYNN_ENABLE_MEMORY_MANAGEMENT "Build with memory management componenet" OFF)
@@ -32,6 +33,7 @@ message(STATUS "\tEnabel achieve all staitc:              ${TINYNN_ACHIEVE_ALL}"
 message(STATUS "\tEnabel alloc tensor dynamic:            ${TINYNN_SANITY_ALLOC}")
 message(STATUS "\tEnabel dump tensor to dir:              ${TINYNN_DUMP_TENSOR}")
 message(STATUS "\tBuild with register callback:           ${TINYNN_CALLBACK_ENABLE}")
+message(STATUS "\tEnabel float16 feature:                 ${TINYNN_ENABLE_FP16}")
 message(
   STATUS "\tBuild with Not standard os:             ${TINYNN_BUILD_FOR_NOT_STANDARD_OS}"
 )
@@ -83,6 +85,11 @@ if(TINYNN_BUILD_FOR_NOT_STANDARD_OS)
   if(${MEGCC_ARCH} STREQUAL "aarch64")
     message(STATUS "set --target to aarch64")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --target=aarch64")
+    if(TINYNN_ENABLE_FP16)
+      message(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=armv8.2-a+fp16+dotprod")
+      message(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")  
+    endif()
   elseif(${MEGCC_ARCH} STREQUAL "x86_64")
     message(STATUS "set --target to x86_64")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --target=x86_64")
@@ -140,6 +147,12 @@ else()
 endif()
 set(SCHEMA_SOURCE ${PROJECT_SOURCE_DIR}/schema/model.fbs)
 set(SCHEMA_OUTPUT ${PROJECT_SOURCE_DIR}/src/cheader)
+if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
+  if(TINYNN_ENABLE_FP16)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=armv8.2-a+fp16+dotprod")
+    message(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
+  endif()
+endif()
 set(CMAKE_C_FLAGS "-fPIC -fpie ${CMAKE_C_FLAGS}")
 include(CheckCCompilerFlag)
 check_c_compiler_flag("-Wno-error=implicit-function-declaration"
