feat(compiler); add fp16 relayout kernel and fix some build error for compiler test
GitOrigin-RevId: 0fb7f33a130ef927dae7c2c4358b5162294124e9

--- a/compiler/test/kernel/CMakeLists.txt
+++ b/compiler/test/kernel/CMakeLists.txt
@@ -256,6 +256,7 @@ else()
                -DMEGCC_COMPILER_KERNEL_TEST_ARCH=${MEGCC_COMPILER_KERNEL_TEST_ARCH}
                -DMEGCC_COMPILER_KERNEL_WITH_ASAN=${MEGCC_COMPILER_KERNEL_WITH_ASAN}
                -DMEGCC_COMPILER_KERNEL_BENCHMARK=${MEGCC_COMPILER_KERNEL_BENCHMARK}
+               -DMEGCC_COMPILER_KERNEL_ENABLE_FP16=${MEGCC_COMPILER_KERNEL_ENABLE_FP16}
     BUILD_BYPRODUCTS ${MEGCC_HOST_BUILD_GEN}
     BUILD_ALWAYS TRUE)
   add_executable(codegen IMPORTED)
