fix(release): fix release package can not cross-build arm-linux
GitOrigin-RevId: 1bdbd481157682800a234c9aafa3eb9ee70fb956

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -257,6 +257,8 @@ endif()
 
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/include DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS TinyNN LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install(FILES ${IMMIGRATION_DIR}/include/extern_c_opr.h
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
 if(NOT TINYNN_BUILD_FOR_NOT_STANDARD_OS)
   install(TARGETS tinynn_test_lite LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
 endif()
