feat(compiler): add arm64 m8n8 matmul kernel
GitOrigin-RevId: 3138b497851e26192f94f27d31b33f9ce1a2b890

--- a/benchmark/src/build_config.h.in
+++ b/benchmark/src/build_config.h.in
@@ -2,9 +2,13 @@
 #define _HEADER_BUILD_CONFIG
 
 #cmakedefine01 ENABLE_MEGENGINE_FRAMEWORK
+#cmakedefine01 ENABLE_MGE_FP16_NCHW88
 
 #ifndef ENABLE_MEGENGINE_FRAMEWORK
 #define ENABLE_MEGENGINE_FRAMEWORK 0
 #endif
 
+#ifndef ENABLE_MGE_FP16_NCHW88
+#define ENABLE_MGE_FP16_NCHW88 0
+#endif
 #endif  // _HEADER_BUILD_CONFIG
