--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 message(STATUS "TinyNN BUILD INFO:")
 message(STATUS "\tSystem:                                 ${CMAKE_SYSTEM_NAME}")
 message(STATUS "\tProcessor:                              ${CMAKE_SYSTEM_PROCESSOR}")
-message(STATUS "\tEnable shared libarys:                  ${TINYNN_SHARED_ENABLE}")
+message(STATUS "\tEnable shared libraries:                ${TINYNN_SHARED_ENABLE}")
 message(STATUS "\tEnable asan check:                      ${TINYNN_ENABLE_ASAN}")
 message(STATUS "\tEnabel achieve all staitc:              ${TINYNN_ACHIEVE_ALL}")
 message(STATUS "\tEnabel alloc tensor dynamic:            ${TINYNN_SANITY_ALLOC}")
