fix(runtime): fix combine io tensor
GitOrigin-RevId: 305be8dcfd127274a89aa79a31f348bd08b852a3

--- a/runtime/test/CMakeLists.txt
+++ b/runtime/test/CMakeLists.txt
@@ -43,6 +43,9 @@ file(
   ./../src/init.c
   ./../src/utils.c
   ./../src/lite/global.c
+  ./../src/lite/network.c
+  ./../src/lite/tensor.c
+  ./../src/parse.c
   ./main.cpp
   common/*.cpp
   runtime/*.cpp
