fix(runtime): abandon user copy data to input tensor because of the memory of input tensor has NOT alloced in static-memory-plan phase.
GitOrigin-RevId: cf1aa6fac6596d6271c3ef30e7ac8c55e08cd24c

--- a/runtime/test/CMakeLists.txt
+++ b/runtime/test/CMakeLists.txt
@@ -46,6 +46,7 @@ file(
   ./../src/lite/network.c
   ./../src/lite/tensor.c
   ./../src/parse.c
+  ./../src/tinynn.c
   ./main.cpp
   common/*.cpp
   runtime/*.cpp
