--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -8,6 +8,7 @@ project(TinyNN LANGUAGES C ASM)
 option(TINYNN_ENABLE_ASAN "Build with asan to check memory issue." OFF)
 option(TINYNN_ENABLE_FP16 "enable fp16 feature" OFF)
 option(TINYNN_ENABLE_AARCH32_DOT "enable dotprod feature on AArch32 platform." OFF)
+option(TINYNN_ENABLE_AARCH64_I8MM "enable i8mm feature on AArch64 platform." OFF)
 option(TINYNN_ACHIEVE_ALL "Build with achieve all lic static." OFF)
 option(TINYNN_SANITY_ALLOC "malloc all tensor dynamic for asan check." OFF)
 option(TINYNN_ENABLE_MEMORY_MANAGEMENT "Build with memory management componenet" OFF)
@@ -34,6 +35,7 @@ message(STATUS "\tEnabel dump tensor to dir:              ${TINYNN_DUMP_TENSOR}"
 message(STATUS "\tBuild with register callback:           ${TINYNN_CALLBACK_ENABLE}")
 message(STATUS "\tEnabel float16 feature:                 ${TINYNN_ENABLE_FP16}")
 message(STATUS "\tEnabel AArch32 dotprod feature:         ${TINYNN_ENABLE_AARCH32_DOT}")
+message(STATUS "\tEnabel AArch64 i8mm feature:            ${TINYNN_ENABLE_AARCH64_I8MM}")
 message(
   STATUS "\tBuild with Not standard os:             ${TINYNN_BUILD_FOR_NOT_STANDARD_OS}"
 )
@@ -86,6 +88,10 @@ if(TINYNN_BUILD_FOR_NOT_STANDARD_OS)
     if(TINYNN_ENABLE_FP16)
       message(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=armv8.2-a+fp16+dotprod")
+    endif()
+    if(TINYNN_ENABLE_AARCH64_I8MM)
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=armv8.6-a+i8mm")
+      message(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
     endif()
   elseif(${MEGCC_ARCH} STREQUAL "x86_64")
     message(STATUS "set --target to x86_64")
@@ -154,6 +160,10 @@ set(SCHEMA_OUTPUT ${PROJECT_SOURCE_DIR}/src/cheader)
 if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
   if(TINYNN_ENABLE_FP16)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=armv8.2-a+fp16+dotprod")
+    message(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
+  endif()
+  if(TINYNN_ENABLE_AARCH64_I8MM)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=armv8.6-a+i8mm")
     message(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
   endif()
 elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armv7-a")
