Revert "apply runner amax"
This reverts commit 3d0c2f3b4147aa2638f59ca752da6d5792aac7e5.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   test_compiler:
-    runs-on: [self-hosted, amax]
+    runs-on: self-hosted
     timeout-minutes: 240
     container:
       image: mcd.io/mcd-apps/megcc-ci:v1
@@ -26,7 +26,7 @@ jobs:
         run: ./compiler/script/ci/run_local_regression_test.sh ./compiler/local_cmake_build
 
   test_kernel:
-    runs-on: [self-hosted, amax]
+    runs-on: self-hosted
     timeout-minutes: 240
     container:
       image: mcd.io/mcd-apps/megcc-ci:v1
